kubernetes-deployer/examples/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dksh-public
  namespace: dksh
  labels:
    app.kubernetes.io/name: dksh-public
    app.kubernetes.io/part-of: project-gems
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/proxy-body-size: 50m
spec:
  ingressClassName: nginx
  rules:
    - host: presales.exist.com.ph
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: dksh-app
                port:
                  number: 80
          - path: /actuator
            pathType: Prefix
            backend:
              service:
                name: dksh-app
                port:
                  number: 80
          - path: /
            pathType: Prefix
            backend:
              service:
                name: dksh-ui
                port:
                  number: 80
  tls:
    - hosts:
        - presales.exist.com.ph
      secretName: dksh-public-tls
